--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Guesser</title>
+    <title>TheHornetXT AI number Guesser</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Guess a Number and the AI Based on Your Strats, Beat the AI</h1>
+        <h1>Guess a Number and the AI Based on Your Strats will try to guess your number, Beat the AI</h1>
         <p class="subtitle">Beta 1.8</p>
         <input type="number" id="numberInput" placeholder="Enter a number (1-100)" min="1" max="100">
         <div class="output">
